Fix `pre` white space

--- a/_sass/base/_typography.scss
+++ b/_sass/base/_typography.scss
@@ -113,7 +113,7 @@ pre > code {
 }
 
 pre {
-  white-space: pre-line;
+  white-space: pre-wrap;
   padding: 1.25em;
 }
 
